--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   google_fonts: ^6.1.0
   path_provider: ^2.1.1
   google_mlkit_commons: ^0.11.0
+  file_picker: ^10.3.3
+  pdfx: ^2.9.2
 
 dev_dependencies:
   flutter_test:
