--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   google_mlkit_commons: ^0.11.0
   file_picker: ^10.3.3
   pdfx: ^2.9.2
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
